--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "imola"]
+	path = imola
+	url = https://github.com/pedrocoutinhosilva/imola
+	shallow = true
+	registered = true
+[submodule "shiny.pwa"]
+	path = shiny.pwa
+	url = https://github.com/pedrocoutinhosilva/shiny.pwa
+	shallow = true
+	registered = true
